--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
-# This workflow will do a clean installation of Node dependencies, cache/restore them, build the
-# source code and run tests with the specified version of Node.
-#
-# For more information see:
-# https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-#
-# TODO: Follow up with https://github.com/actions/setup-node/issues/531.
+# This workflow does a clean installation of Node dependencies, caches/restores them, builds the
+# source code, and runs tests with the specified version of Node.
+
 name: Node.js CI
 
 on:
@@ -19,24 +15,16 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
         version:
-          # - '4.0.8'
-          # - '4.1.5'
-          # - '4.2.8'
-          # - '5.0.11'
-          # - '5.1.15'
-          # - '6.0.4'
-          # - '6.1.6'
-          # - '7.0.12'
           # - '8.0.11'
           - '9.0.7'
-          - '10.0.1'
+          - '10.0.3'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
 
-      # This action must be called before actions/setup-node if we let actions/setup-node handle
-      # caching for us because it will run 'pnpm store path' to get the path to the pnpm virtual
-      # store.
+      # Note: This action must be run before 'actions/setup-node' if we let 'actions/setup-node'
+      # handle caching for us because it will run 'pnpm store path' to get the path to the pnpm
+      # virtual store.
       #
       # See https://github.com/pnpm/action-setup for more details.
       - uses: pnpm/action-setup@v2
@@ -60,7 +48,6 @@ jobs:
         with:
           version: ${{ matrix.version }}
           license: ${{ secrets.INSTALL4J_LICENSE_KEY }}
-          cache: true
 
       - run: install4jc --version
 
