--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/cache": "^3.0.5",
+    "@actions/cache": "^3.1.2",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
-    "@actions/glob": "^0.3.0",
+    "@actions/glob": "^0.4.0",
     "@actions/http-client": "^2.0.1",
     "@actions/tool-cache": "^2.0.1",
     "semver": "^7.3.8"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.8",
-    "@types/node": "^16.11.66",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "@vercel/ncc": "^0.34.0",
-    "eslint": "^8.25.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "@vercel/ncc": "^0.36.1",
+    "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.9.0",
-    "jest": "^28.1.3",
-    "ts-jest": "^28.0.8",
-    "typescript": "~4.7.4"
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.4.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
   }
 }
