--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "setup-install4j",
   "version": "0.1.0",
-  "description": "",
+  "description": "A JavaScript action for setting up install4j",
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
     "build": "ncc build src/index.ts --source-map --license licenses.txt"
   },
-  "keywords": [],
+  "keywords": ["github-actions", "install4j"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@actions/cache": "^3.1.2",
     "@actions/core": "^1.10.0",
